# bikelane_detection

./: florence2_segmentation.py  pyproject.toml  vit_classification.py
src/: florence2_segmentation.py  grounding_dino.py
