[project]
name = "bikelane-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "basedpyright>=1.32.1",
    "einops>=0.8.1",
    "picamera2-client",
    "pillow>=12.0.0",
    "timm>=1.0.21",
    "torch>=2.9.0",
    "transformers==4.56",
]

[tool.uv.sources]
picamera2-client = { git = "https://github.com/ntbangerter/picamera2_client" }

[tool.basedpyright]
typeCheckingMode = "standard"